add design diagram and update swagger.json
1) add design diagram
2) fix error handling for swagger validator
3) update all API summaries and add necessary 400/404 responses in swagger.json
4) move APIs for task result, taskrunner result and job result under
/results
