# lib/api/controllers/nodegroups.js
@@ -10,9 +10,6 @@ var getAllNodegroups = controller(function() {
 
 var postNodegroup = controller(function(req) {
     var count = req.swagger.params.count.value;
-    if(count <= 0 || count > 2000) {
-        throw new Error.BadRequestError('Parameter count should be between 1 and 2000.');
-    }
     return nodeService.postNodegroup(count);
 });
 
